<resources>
    <string name="app_name">SegundaProvaContatos</string>
    <string name="title_home">Home</string>
    <string name="title_Cadastra">Cadastro</string>
    <string name="title_detalhes">Detalhes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sucessoContatoAlterado">Sucesso! Seu contato foi alterado</string>
    <string name="sucessoContatoCadastrado">Sucesso! Seu contato foi cadastrado</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="rua">Rua</string>
    <string name="n_mero_da_casa">Número da casa</string>
    <string name="telefone_prim_rio">Telefone Primário</string>
    <string name="c_digo_de_rea">Código de área</string>
    <string name="este_contato_o_seu">Este contato é o seu...</string>
    <string name="salvar">Salvar</string>
    <string name="cadastra">Cadastra</string>
    <string name="sobre">Sobre</string>
</resources>