<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="tads.eaj.ufrn.segundaprovacontatos.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cadastra"
        android:name="tads.eaj.ufrn.segundaprovacontatos.ui.cadastra.CadastraFragment"
        android:label="@string/title_Cadastra"
        tools:layout="@layout/fragment_cadastra" />

    <fragment
        android:id="@+id/navigation_detalhes"
        android:name="tads.eaj.ufrn.segundaprovacontatos.ui.detalhes.DetalhesFragment"
        android:label="@string/title_detalhes"
        tools:layout="@layout/fragment_detalhes" />
</navigation>