<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="tads.eaj.ufrn.segundaprovacontatos.ui.detalhes.AlteraViewModel" />

        <import type="tads.eaj.ufrn.segundaprovacontatos.ui.converters.DataBindingConverters" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.altera.AlteraFragment">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textPersonName"
                    android:text="@={viewmodel.contact.firstName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLastname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sobrenome"
                    android:inputType="textPersonName"
                    android:text="@={viewmodel.contact.lastName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextStreet"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextLastname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rua"
                    android:inputType="text"
                    android:text="@={viewmodel.contact.street}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextNumberHouse"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextStreet">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNumberHouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/n_mero_da_casa"
                    android:inputType="number"
                    android:text="@={DataBindingConverters.convertFloatToString(viewmodel.contact.numberHouse)}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextMainPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumberHouse">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editMainPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone_prim_rio"
                    android:inputType="phone"
                    android:text="@={viewmodel.contact.phone}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextAreaCode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextMainPhone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAreaCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/c_digo_de_rea"
                    android:inputType="numberDecimal"
                    android:text="@={DataBindingConverters.convertIntToString(viewmodel.contact.areaCode)}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextRelationship"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAreaCode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editRelationship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/este_contato_o_seu"
                    android:inputType="text"
                    android:text="@={viewmodel.contact.relationship}" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonAltera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/salvar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextRelationship" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>